--- a/Project_Three_GUI/MainWindow.xaml
+++ b/Project_Three_GUI/MainWindow.xaml
@@ -1,12 +1,51 @@
-﻿<Window x:Class="Project_Three_GUI.MainWindow"
+<Window x:Class="MyChapterOne.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Project_Three_GUI"
+        xmlns:local="clr-namespace:MyChapterOne"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Dunwoody Housing Application " Height="450" Width="800">
+    <StackPanel HorizontalAlignment='Stretch'  VerticalAlignment='Stretch' >
+        <TextBlock TextWrapping='Wrap' VerticalAlignment='Top' FontSize='25' Margin='0,0,-0.4,0' Height='46'><Run Text=''/><InlineUIContainer>
+                <Image Height='100' Width='100'/>
+            </InlineUIContainer><InlineUIContainer/></TextBlock>
+        <TabControl MinHeight='300'>
+            <TabItem Header='This House ' Margin='-2,-2,-35,0'>
+                <Grid Background='#FFE5E5E5'>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width='85*'/>
+                        <ColumnDefinition Width='19*'/>
+                        <ColumnDefinition Width='685*'/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </TabItem>
+            <TabItem Header='That House' Margin='64,-2,-83.8,0'>
+
+                <Grid Background='#FFE5E5E5' Margin='0,-1,0,1.2'/>
+            </TabItem>
+            <TabItem Header='Another House ' Margin='97.8,-2,-122.8,0'>
+                <StackPanel>
+                    <Grid Margin='15,10,15,20' Background='Beige' Height='330'>
+                    
+                        <Grid HorizontalAlignment='Left' Height='100' VerticalAlignment='Top' Width='100'>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height='1*'/>
+                                <RowDefinition Height='40*'/>
+                            </Grid.RowDefinitions>
+                            <Grid HorizontalAlignment='Left' Height='100' VerticalAlignment='Top' Width='100'/>
+                        </Grid>
+                        <Rectangle Fill='AntiqueWhite' HorizontalAlignment='Left' Height='47' Margin='0,166,0,0' VerticalAlignment='Top' Width='758'/>
+
+                    </Grid>
+
+                </StackPanel>
+
+
+            </TabItem>
+            <Image Height='100' Width='100'/>
+        </TabControl>
+
+    </StackPanel>
+
 </Window>
